# RayTracing

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  NOTES_ORAL.md  README.md  generate_pdf.py  rapport_raytracer.tex
docs/: ARCHITECTURE.md  ROMEO_GUIDE.md  Sujet.txt
docs/html/: aabb_8cuh.html  aabb_8cuh.js  aabb_8cuh_source.html  accumulation__buffer_8cuh.html  accumulation__buffer_8cuh.js  accumulation__buffer_8cuh_source.html  annotated.html  annotated_dup.js  args_8cuh.html  args_8cuh.js  args_8cuh_source.html  bvh_8cuh.html  bvh_8cuh.js  bvh_8cuh_source.html  bvh__builder_8cuh.html  bvh__builder_8cuh.js  bvh__builder_8cuh_source.html  camera_8cuh.html  camera_8cuh.js  camera_8cuh_source.html  camera__controller_8cuh.html  camera__controller_8cuh.js  camera__controller_8cuh_source.html  class_c_p_u_b_v_h_builder-members.html  class_c_p_u_b_v_h_builder.html  class_c_p_u_b_v_h_builder.js  classes.html  classrt_1_1_a_a_b_b-members.html  classrt_1_1_a_a_b_b.html  classrt_1_1_a_a_b_b.js  classrt_1_1_b_v_h-members.html  classrt_1_1_b_v_h.html  classrt_1_1_b_v_h.js  classrt_1_1_b_v_h_builder-members.html  classrt_1_1_b_v_h_builder.html  classrt_1_1_b_v_h_builder.js  classrt_1_1_c_p_u_random-members.html  classrt_1_1_c_p_u_random.html  classrt_1_1_c_p_u_random.js  classrt_1_1_camera-members.html  (+256 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  (+64 more)
include/raytracer/: fwd.cuh
include/raytracer/acceleration/: bvh.cuh  bvh_builder.cuh
include/raytracer/camera/: camera.cuh
include/raytracer/core/: aabb.cuh  cuda_buffer.cuh  cuda_compat.cuh  cuda_utils.cuh  hit_record.cuh  interval.cuh  random.cuh  ray.cuh  timer.cuh  transform.cuh  vec3.cuh
include/raytracer/environment/: hdri.cuh  sky.cuh
include/raytracer/geometry/: box.cuh  geometry_utils.cuh  hittable.cuh  hittable_list.cuh  mesh.cuh  moving_sphere.cuh  obj_loader.cuh  plane.cuh  quad.cuh  sphere.cuh  triangle.cuh
include/raytracer/interactive/: accumulation_buffer.cuh  camera_controller.cuh  gl_interop.cuh  input_handler.cuh  window.cuh
include/raytracer/lighting/: importance_sampling.cuh  pdf.cuh
include/raytracer/materials/: dielectric.cuh  emissive.cuh  isotropic.cuh  lambertian.cuh  material.cuh  material_factory.cuh  metal.cuh
include/raytracer/rendering/: cpu_renderer.cuh  integrator.cuh  material_dispatch.cuh  render_config.cuh  renderer.cuh  tone_mapping.cuh
include/raytracer/textures/: checker.cuh  image_texture.cuh  noise.cuh  solid_color.cuh  texture.cuh
rapport/: NOTES_ORAL.md  generate_animations.py  generate_charts.py  generate_pdf.py  rapport.tex  rapport_final.tex  rapport_raytracer.tex
scenes/: benchmark.json  cornell_box.json  showcase.json  spheres.json
scripts/slurm/: benchmark_romeo.slurm  interactive.slurm  run_benchmark.slurm  run_raytracer.slurm
src/: main.cu  main_cpu.cpp
src/cli/: args.cuh
src/io/: image_writer.cuh  scene_loader.cuh
src/scene/: default_scene.cuh
src/utils/: json_helpers.cuh
tests/: test_aabb.cpp  test_bvh.cpp  test_bvh_builder.cpp  test_camera.cpp  test_cpu_random.cpp  test_cuda_kernels.cu  test_geometry_utils.cpp  test_hit_record.cpp  test_hittable_list.cpp  test_hittable_object.cpp  test_interval.cpp  test_main.cpp  test_material_dispatch.cpp  test_materials.cpp  test_plane.cpp  test_ray.cpp  test_sky.cpp  test_sphere.cpp  test_texture.cpp  test_tone_mapping.cpp  test_vec3.cpp
